language/tools/move-cli/tests/testsuite/republish/args.exp
Command `publish -v`:
Compiling Move modules...
Found and compiled 2 modules
Command `view storage/0x00000000000000000000000000000042/modules/M.mv`:
module 42.M {



}
Command `view storage/0x00000000000000000000000000000043/modules/N.mv`:
module 43.N {



}
Command `publish -v`:
Compiling Move modules...
Found and compiled 2 modules
Command `view storage/0x00000000000000000000000000000042/modules/M.mv`:
module 42.M {



}
Command `view storage/0x00000000000000000000000000000043/modules/N.mv`:
module 43.N {



}
Command `publish -v --no-republish`:
Compiling Move modules...
error: 

   ┌── src/M.move:2:8 ───
   │
 2 │ module M {
   │        ^ Duplicate definition for module '0x42::M'
   │

   ┌── build/mv_interfaces/00000000000000000000000000000042/M.move:2:8 ───
   │
 2 │ module M {
   │        - Previously defined here
   │

error: 

   ┌── src/N.move:2:8 ───
   │
 2 │ module N {
   │        ^ Duplicate definition for module '0x43::N'
   │

   ┌── build/mv_interfaces/00000000000000000000000000000043/N.move:2:8 ───
   │
 2 │ module N {
   │        - Previously defined here
   │

Command `publish -v --no-republish src/M.move`:
Compiling Move modules...
error: 

   ┌── src/M.move:2:8 ───
   │
 2 │ module M {
   │        ^ Duplicate definition for module '0x42::M'
   │

   ┌── build/mv_interfaces/00000000000000000000000000000042/M.move:2:8 ───
   │
 2 │ module M {
   │        - Previously defined here
   │

